--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,5 +1,6 @@
 .header {
     background-color: var(--color-water-10);
     color:rgb(0, 0, 0);
-    
+    text-align: center;
+    padding: 10px 0px;    
 }
