--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -2,5 +2,6 @@ main {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    height: 100%;
+    height:100vh;
+    /* height: 100%; */
 }
