--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,11 +1,13 @@
 button {
+    align-self: center;
     background-color:  var(--color-nemo);
     color: rgb(255, 255, 255);
-    padding: 20px 40px;
+    padding: 20px 60px;
     font-weight: bold;
     font-size: large;
     border:none;
     border-radius: 5px;
+    text-align: center;
 }
 
 button:hover {
