--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -2,12 +2,20 @@ button {
     align-self: center;
     background-color:  var(--color-nemo);
     color: rgb(255, 255, 255);
-    padding: 20px 60px;
-    font-weight: bold;
-    font-size: large;
+    padding: 12px 40px;
+    font-weight: 700;
     border:none;
-    border-radius: 5px;
+    border-radius: 4px;
     text-align: center;
+    gap: 8px;
+    display: flex;
+    flex-direction: row;
+    width: 133px;
+    height: 48px;
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
 }
 
 button:hover {
